--- a/README
+++ b/README
@@ -20,10 +20,13 @@ Run the following to deploy the library on your system::
 
     $ python setup.py install
 
+This does not only install the library but also registers an executable file
+(on Win32 systems as ``upsidedown.exe`` in ``C:\Python26\Scripts\``).
+
 Command line
 ============
 
 You can also easily use this software on the command line::
 
-    $ echo hello world\! | python upsidedown.py
+    $ echo hello world\! | upsidedown
     ¡plɹoʍ ollǝɥ
