--- a/README
+++ b/README
@@ -11,7 +11,7 @@ Example
 
     >>> import upsidedown
     >>> print upsidedown.transform('hello world!')
-    ¡plɹoʍ ollǝɥ
+    ¡pꞁɹoʍ oꞁꞁǝɥ
 
 Installing
 ==========
@@ -29,4 +29,4 @@ Command line
 You can also easily use this software on the command line::
 
     $ echo hello world\! | upsidedown
-    ¡plɹoʍ ollǝɥ
+    ¡pꞁɹoʍ oꞁꞁǝɥ
